--- a/src/css/blocks/tag-list.css
+++ b/src/css/blocks/tag-list.css
@@ -17,7 +17,7 @@
 
 .tag-list .cluster {
   --cluster-horizontal-alignment: center;
-  --space: 1.5rem 1rem;
+  --space: 1.2rem 1rem;
 
   margin-top: 0;
 }
