--- a/src/css/global/base.css
+++ b/src/css/global/base.css
@@ -112,7 +112,7 @@ img[src*=".svg"] {
 
 [role="list"] {
   padding: 0;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 [id] {
